<resources>
    <string name="app_name">智能巡检</string>
    <string name="title_activity_login22">Sign in</string>

    <!-- Strings related to login -->
    <string name="user_name">用户名</string>
    <string name="finger_login">指纹登录</string>
    <string name="finger_readme">将手指放在指纹按钮上</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="Complete">完成</string>
    <string name="login_failed">登陆失败，重新登陆</string>
    <string name="cancel">取消</string>

    <string name="txt_fingerplace">请按手指&#8230;</string>
    <string name="txt_fg_read">指纹读取中...</string>
    <string name="txt_fg_process">处理中...</string>
    <string name="txt_fg_rd_success">指纹读取成功</string>
    <string name="txt_fg_identify">指纹识别中...</string>
    <string name="txt_fg_gen_failed">生成特征值失败</string>
    <string name="txt_fg_ok">指纹验证成功</string>
    <string name="txt_fg_failed">指纹验证失败</string>
    <string name="txt_fg_timeout">上传图像超时,请重来</string>
    <string name="txt_fg_input_ok">指纹录入成功</string>
    <string name="txt_fg_input_failed">指纹录入失败</string>

    <string name="txt_fingerplace2">请再按手指&#8230;</string>
    <string name="txt_fp_bidui_ok">两次比对成功</string>
    <string name="txt_fp_bidui_failed">两次比对失败</string>

    <string name="bt_start_radar">开始读卡</string>
    <string name="bt_stop_radar">取消读卡</string>


    <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>

    <!-- 界面按钮 -->
    <string name="upload">上传</string>
    <string name="download">下载</string>
    <string name="warning">报警</string>
    <string name="history">历史</string>

    <string name="rback">后退</string>


    <string name="deviceSn">  设备编号:</string>

</resources>
