<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_shadow"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="120dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/user_name"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_marginTop="1dp"
                android:singleLine="true" />


            <com.dd.CircularProgressButton
                android:id="@+id/btnWithText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cpb_textComplete="@string/Complete"
                app:cpb_textError="@string/login_failed"
                app:cpb_textIdle="@string/action_sign_in" />

            <Button
                android:id="@+id/fingerLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@color/white"
                android:background="@color/cornflowerblue"
                android:text="@string/finger_login"/>

        </LinearLayout>


    </ScrollView>

</RelativeLayout>
